@@ -1,5 +1,8 @@
 2003-02-15  Martin Willers <willers@xm-arts.de>
 	- using KActions for start, stop, and configure entries
+	- display list of configured teas on left-click,
+	  making one-click starting of a new tea possible
+	- some cleanups
 
 2003-02-07  Martin Willers <willers@xm-arts.de>
 	- fixed inserting of new items into listview
